# cordon

./: .gitignore  Cargo.toml  README.md  commit.txt
benches/: latency.sh  sysbench.sh
examples/: common.rs  cordon.rs  demo0.rs  demo1.rs  demo2.rs  demo3.rs  demo4.rs  demo5.rs  demo6.rs  fully_sandboxed_echo.rs  hlapi.rs  non_sandboxed_echo.rs  std_echo.rs  sysbench.rs
src/: command.rs  error.rs  id_map.rs  lib.rs  libc_util.rs  mount_table.rs  spawn.rs  systemd.rs
src/systemd/: dbus_generated.rs
