[package]
name = "cordon"
description = "Embeddable sandboxing a-la-carte"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloc_counter = "0.0.4"
libc = "0.2.148"
c_str_macro = "1.0.3"
dbus = "0.9.7"
rand = "0.8.5"
thiserror = "1.0.50"
