[package]
name = "cordon"
description = "Embeddable sandboxing a-la-carte"
documentation = "https://docs.rs/cordon"
homepage = "https://github.com/wgoodall01/cordon"
repository = "https://github.com/wgoodall01/cordon"
license = "MIT"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloc_counter = "0.0.4"
libc = "0.2.148"
c_str_macro = "1.0.3"
dbus = "0.9.7"
rand = "0.8.5"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
eyre = "0.6.9"

[package.metadata.release]
tag-message = "Release {{crate_name}} v{{version}}"
pre-release-commit-message = "Release {{crate_name}} v{{version}}"
